--- a/index.html
+++ b/index.html
@@ -1,242 +1,470 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            text-decoration: none;
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
 
-            font-family: 'Inter', sans-serif, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: "Inter", sans-serif, "Gill Sans MT", Calibri,
+          "Trebuchet MS", sans-serif;
+      }
 
-        }
+      body {
+      }
 
-        body {
-            background-color: #363943;
-        }
-
-        .container {
-            background-color: rgb(255, 255, 255);
-            height: 1000px;
-            width: 90%;
-            margin: 0 auto;
-            margin-top: 50px;
-            border-radius: 30px;
-            padding: 25px;
-        }
-
-        .header {
-            position: relative;
-            margin: 0 auto;
-            height: 80px;
-        }
-
-        .header__logo {
-            position: absolute;
-            height: 85px;
-            width: 85px;
-            background-image: url('https://previewengine-accl.zoho.com/image/WD/ea2xyac59a2662f73446d9c53fb38674dd16d?width=500&height=500');
-            background-size: 100%;
-            background-repeat: no-repeat;
-        }
-
-        .header__title {
-            position: absolute;
-            font-size: 24px;
-            font-weight: bold;
-            top: 30px;
-            left: 80px;
+/* 
+      .container {
+          padding: 50px;
         }
 
         .text {
-            line-height: 1.3;
-            font-size: 15px;
+        line-height: 1.5;
+        font-size: 16px;
+      }
+
+      .button,.button2,.button3{
+        padding-top: 10px;
+        height: 55px;
+      }
+
+
+      .text-3 {
+        margin-top: 5px;
+      } */
+
+
+      .backGround {
+        background-color: #363943;
+        width: 100%;
+        height: 100%;
+        padding: 10px 0;
+      }
+
+      .container {
+        background-color: rgb(226, 226, 226);
+        width: 90%;
+        margin: 0 auto;
+        border-radius: 30px;
+        /* padding: 15px; */
+        padding: 30px;
+      }
+
+      .header__logo {
+        margin: 0 auto;
+        /* height: 85px;
+        width: 85px; */
+
+        height: 120px;
+          width: 120px;
+
+
+        background-image: url("https://previewengine-accl.zoho.com/image/WD/jzr04c2c2b5e782b74cee991ac435177499d5?width=2046&height=1536");
+        background-size: 100%;
+        background-repeat: no-repeat;
+        transform: translateY(-10px);
+      }
+
+      .header__title {
+        text-align: center;
+        font-size: 24px;
+        font-weight: bold;
+        top: 30px;
+        left: 80px;
+        transform: translateY(-20px);
+      }
+
+      .text {
+        /* line-height: 1.3;
+        font-size: 15px; */
+        color: #3b3b3b;
+
+        line-height: 1.5;
+        font-size: 16px;        
+      }
+
+      .text-1 {
+        margin-top: 10px;
+      }
+
+      .text-2 {
+        margin-top: 25px;
+      }
+
+      .text-3 {
+        /* margin-top: 25px; */
+        margin-top: 5px;
+
+      }
+
+      .text-3 span {
+        font-weight: bold;
+      }
+
+      .text-4 {
+        margin-top: 25px;
+        font-weight: bold;
+      }
+
+      .button {
+        margin: 0 auto;
+        background-color: #327ff2;
+        border-radius: 8px;
+        /* height: 40px; */
+        width: 155px;
+        display: block;
+        text-align: center;
+        color: white;
+        font-weight: bold;
+        font-size: 12px;
+        /* padding-top: 5px; */
+
+        padding-top: 7px;
+        height: 50px;
+
+
+      }
+
+      .buttonTel {
+        margin: 0 auto;
+        border-radius: 8px;
+        border: 3px solid #327ff2;
+        height: 80px;
+        width: 155px;
+        display: block;
+        text-align: center;
+        color: #1c1c1c;
+        font-weight: bold;
+        font-size: 12px;
+        padding-top: 5px;
+        margin-top: 20px;
+      }
+
+      .buttonTel div {
+        margin: 0 auto;
+        margin-top: 5px;
+      }
+
+      .buttonTel p {
+        margin-top: 5px;
+      }
+
+      .button1 {
+        margin-top: 25px;
+      }
+
+      .text-5 {
+        margin-top: 25px;
+      }
+
+      .lista1 {
+        margin-top: 5px;
+        margin-left: 30px;
+      }
+
+      .text-6 {
+        margin-top: 5px;
+      }
+
+      .text-6 span {
+        font-weight: bold;
+      }
+
+      .imageCont {
+        position: relative;
+        height: 50px;
+        width: 120px;
+        margin: 0 auto;
+        text-align: center;
+        margin-top: 23px;
+      }
+
+      .telegram {
+        display: block;
+        height: 40px;
+        width: 40px;
+        background-image: url("https://previewengine-accl.zoho.com/image/WD/ea2xyd865b221b77946a1858565c33bc1663c?width=2046&height=1536");
+        background-size: 100%;
+        background-repeat: no-repeat;
+      }
+
+      .discord {
+        display: block;
+        height: 40px;
+        width: 40px;
+        background-image: url("https://previewengine-accl.zoho.com/image/WD/ea2xyc7ddb2c1833a48f6a5b6566d1d648097?width=2046&height=1536");
+        background-size: 100%;
+        background-repeat: no-repeat;
+      }
+
+      .videoCont {
+        height: 130px;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        margin-top: 23px;
+      }
+
+      .button2 {
+        margin: 0 auto;
+        background-color: #327ff2;
+        border-radius: 8px;
+        /* height: 41px; */
+        width: 210px;
+        display: block;
+        text-align: center;
+        color: white;
+        font-weight: bold;
+        font-size: 12px;
+        /* padding-top: 5px; */
+
+        padding-top: 7px;
+        height: 50px;
+
+
+
+      }
+
+      .button3 {
+        margin: 0 auto;
+        background-color: #327ff2;
+        border-radius: 8px;
+        /* height:41px; */
+        width: 210px;
+        display: block;
+        text-align: center;
+        color: white;
+        font-weight: bold;
+        font-size: 12px;
+        /* padding-top: 5px; */
+        margin-top: 23px;
+
+        padding-top: 7px;
+        height: 50px;
+
+
+
+      }
+
+      .text-7 {
+        width: 100%;
+        margin: 0 auto;
+        margin-top: 20px;
+        text-align: center;
+        font-weight: bold;
+      }
+
+      .text-8 {
+        width: 100%;
+        margin: 0 auto;
+        margin-top: 0px;
+        text-align: center;
+        font-weight: bold;
+      }
+
+
+
+      @media only screen and (min-width: 600px) {
+        /* For tablets: */
+        .col-1 {
+          width: 8.33%;
         }
 
-
-        .text-1 {
-            margin-top: 20px;
+        .col-2 {
+          width: 16.66%;
         }
 
-        .text-2 {
-            margin-top: 25px;
+        .col-3 {
+          width: 25%;
         }
 
-        .text-3 {
-            margin-top: 25px;
+        .col-4 {
+          width: 33.33%;
         }
 
-        .text-3 span {
-            font-weight: bold;
+        .col-5 {
+          width: 41.66%;
         }
 
-        .text-4 {
-            margin-top: 25px;
-            font-weight: bold;
+        .col-6 {
+          width: 50%;
         }
 
-        .button {
-            margin: 0 auto;
-            background-color: #327FF2;
-            border-radius: 8px;
-            height: 40px;
-            width: 155px;
-            display: block;
-            text-align: center;
-            color: white;
-            font-weight: bold;
-            font-size: 12px;
-            padding-top: 5px;
-
+        .col-7 {
+          width: 58.33%;
         }
 
-
-        .button1 {
-            margin-top: 20px;
-
+        .col-8 {
+          width: 66.66%;
         }
 
-        .text-5 {
-            margin-top: 25px;
+        .col-9 {
+          width: 75%;
         }
 
-        .lista1 {
-            margin-top: 5px;
-            margin-left: 30px;
-
+        .col-10 {
+          width: 83.33%;
         }
 
-
-
-
-        @media only screen and (min-width: 600px) {
-
-            /* For tablets: */
-            .col-1 {
-                width: 8.33%;
-            }
-
-            .col-2 {
-                width: 16.66%;
-            }
-
-            .col-3 {
-                width: 25%;
-            }
-
-            .col-4 {
-                width: 33.33%;
-            }
-
-            .col-5 {
-                width: 41.66%;
-            }
-
-            .col-6 {
-                width: 50%;
-            }
-
-            .col-7 {
-                width: 58.33%;
-            }
-
-            .col-8 {
-                width: 66.66%;
-            }
-
-            .col-9 {
-                width: 75%;
-            }
-
-            .col-10 {
-                width: 83.33%;
-            }
-
-            .col-11 {
-                width: 91.66%;
-            }
-
-            .col-12 {
-                width: 100%;
-            }
-
-            .header__title {
-                font-size: 40px;
-                top: 23px;
-                left: 100px;
-            }
-
-            .header__logo {
-                height: 100px;
-                width: 100px;
-
-            }
-
-            .container {
-                padding: 35px;
-
-            }
-
-
+        .col-11 {
+          width: 91.66%;
         }
+
+        .col-12 {
+          width: 100%;
+        }
+
+        .header__title {
+          font-size: 40px;
+          top: 23px;
+          left: 100px;
+        }
+
+        .header__logo {
+          height: 120px;
+          width: 120px;
+        }
+
+        .container {
+          padding: 50px;
+        }
+
+        .text {
+        line-height: 1.5;
+        font-size: 16px;
+      }
+
+      .button,.button2,.button3{
+        padding-top: 10px;
+        height: 55px;
+      }
+
+
+      .text-3 {
+        margin-top: 5px;
+      }
+
+
+
+      }
     </style>
-</head>
+  </head>
 
+  <body>
+    <div class="backGround">
+      <div class="container col-9">
+        <div class="header__logo"></div>
+        <h2 class="header__title">OTM TRADING</h2>
 
-
-
-
-<body>
-    <div class="container col-9">
-        <div class="header">
-            <div class="header__logo"></div>
-            <h2 class="header__title">OTM TRADING</h2>
-        </div>
-
-        <h4 class="text text-1">
-            ¡Hola!,
-        </h4>
+        <h4 class="text text-1">¡Hola!,</h4>
 
         <p class="text text-2">
-            ¡En nombre de OTM Trading, queremos agradecerte inmensamente por la confianza en nuestros productos!
-            Esperamos que estés súper contento con tu compra, tal como lo estamos nosotros.
+          Agradecemos tu confianza en OTM Trading. Esperamos que estés feliz
+          con tu compra.
         </p>
 
         <p class="text text-3">
-            Para comenzar a usar el software, <span>estos pasos:</span>
+          Para comenzar a usar el software, <span>sigue estos pasos:</span>
         </p>
 
         <p class="text text-4">
-            Paso 1: Descarga el archivo comprimido "DOCUMENTACIÓN OTM.rar".
+          Paso 1: Descarga el archivo comprimido "DOCUMENTACIÓN OTM.rar".
         </p>
 
-        <a href="https://www.mediafire.com/folder/yy0395ylzrb8o/Documentación_OTM" target="_blank"
-            class="button button1">
-            <p>Descargar<br>Documentación</p>
+        <a
+          href="https://www.mediafire.com/folder/yy0395ylzrb8o/Documentación_OTM"
+          target="_blank"
+          class="button button1"
+        >
+          Descargar<br />Documentación
         </a>
 
-        <p  class="text text-5">
-            al descomprimirlo obtendrás: 
-        </p>
+        <p class="text text-5">al descomprimirlo obtendrás:</p>
 
         <ul class="text lista1">
-            <li>Manual de instalación OTM.pdf</li>
-            <li>Guía de errores frecuentes OTM.pdf</li>
-            <li>OTMV2.5_ES.xml (plantilla predefinida para el S&P500)</li>
-            <li>OTMV2.5_CL.xml (plantilla predefinida para el Crudo)</li>
-          </ul>
-          
+          <li>Manual de instalación OTM.pdf</li>
+          <li>Guía de errores frecuentes OTM.pdf</li>
+          <li>OTMV2.5_ES.xml (plantilla predefinida para el S&P500)</li>
+          <li>OTMV2.5_CL.xml (plantilla predefinida para el Crudo)</li>
+        </ul>
 
+        <p class="text text-4">
+          Paso 2: Descargar el software en formato comprimido (.zip)
+        </p>
 
+        <p class="text text-6">
+           <span>NO</span> debes descomprimir este archivo
+        </p>
 
+        <a href="https://www.link.com" target="_blank" class="button button1">
+          Descargar<br />OTM Software
+        </a>
+
+        <p class="text text-4">
+          Paso 3: Sigue las instrucciones en "Manual de instalación OTM.pdf"
+        </p>
+
+        <p class="text text-4">
+          Paso 4: Únete a nuestros canales informativos.
+        </p>
+
+        <a
+          class="buttonTel"
+          href="https://t.me/+Fk1LpgbV4FA5NDkx"
+          target="_blank"
+        >
+          <div class="telegram"></div>
+          <p>Telegram</p>
+        </a>
+
+        <a
+          class="buttonTel"
+          href="https://discord.gg/FzwD2YFwGR"
+          target="_blank"
+        >
+          <div class="discord"></div>
+          <p>Discord</p>
+        </a>
+
+        <p class="text text-4">
+          PASO 5 : Consigue el máximo de tu software con los siguientes vídeos
+          tutoriales.
+        </p>
+
+        <div class="videoCont">
+          <a href="https://www.youtube.com/watch?v=X0ipn3QuFF0" target="_blank" class="button2">
+              Seminario estrategias de <br />
+              Trading usando OTM
+            
+          </a>
+
+          <a href="https://www.youtube.com/watch?v=btzOQX3FNII" target="_blank" class="button3">
+              Aprende cómo se conforman <br />
+              las señales de OTM
+          </a>
+        </div>
+
+        <p class="text text-5">
+          Comparte tus comentarios sobre el producto. Nos ayudará a comprender
+          mejor su uso y a identificar posibles mejoras. Si necesitas ayuda,
+          estamos dispuestos a brindártela.
+        </p>
+
+        <p class="text text-5">¡Gracias!</p>
+
+        <hr style="margin-top: 8px" />
+
+        <p class="text text-7">otmtrading.com</p>
+
+        <p class="text text-8">info@otmtrading.com</p>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
